crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v129.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 129
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 7
          - secs: 0
            nanos: 0
        - - 4
          - secs: 0
            nanos: 28000000
        - - 10
          - secs: 0
            nanos: 26000000
        - - 10
          - secs: 0
            nanos: 27000000
      stake_weighted_median:
        secs: 0
        nanos: 27000000
  - - MergeCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 49000000
        - - 3
          - secs: 0
            nanos: 28000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 63000000
        - - 3
          - secs: 0
            nanos: 74000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 63000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 88000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 88000000
  - - Upgrade
    - observations:
        - - 7
          - secs: 0
            nanos: 536000000
        - - 3
          - secs: 0
            nanos: 386000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 277000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 1
          - secs: 0
            nanos: 312000000
      stake_weighted_median:
        secs: 0
        nanos: 277000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 492000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 499000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 277000000
  - - mixed_move_calls
    - secs: 0
      nanos: 776000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 420000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 264000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 189000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 64000000
  - - make_move_vec_0_elements
    - secs: 0
      nanos: 27000000
  - - mixed_commands
    - secs: 0
      nanos: 391000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
