crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v130.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 130
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 0
        - - 5
          - secs: 0
            nanos: 19000000
        - - 3
          - secs: 0
            nanos: 30000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 20000000
        - - 10
          - secs: 0
            nanos: 39000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 8
          - secs: 0
            nanos: 20000000
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 45000000
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 0
        - - 5
          - secs: 0
            nanos: 32000000
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - TransferObjects
    - observations:
        - - 7
          - secs: 0
            nanos: 19000000
        - - 8
          - secs: 0
            nanos: 16000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 40000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 250000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 10
          - secs: 0
            nanos: 300000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 7
          - secs: 0
            nanos: 442000000
      stake_weighted_median:
        secs: 0
        nanos: 404000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 62000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 10
          - secs: 0
            nanos: 170000000
      stake_weighted_median:
        secs: 0
        nanos: 142000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 404000000
  - - mixed_move_calls
    - secs: 0
      nanos: 546000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 204000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 76000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 64000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 96000000
  - - make_move_vec_5_elements
    - secs: 0
      nanos: 114000000
  - - mixed_commands
    - secs: 0
      nanos: 122000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
